Web Inspector: Dark Mode: Increase contrast in the graphics tab for @media (prefers-contrast: more) and @media (prefers-color-scheme: dark) https://bugs.webkit.org/show_bug.cgi?id=272133
Reviewed by NOBODY (OOPS!).

Set placeholder color to var--text-color-light in CollectionContentView.css.
Lighten border-bottom and border-top in GraphicsOverviewContentView.css.
Delete second background-color in .content-view.graphics-overview in GraphicsOverviewContentView.css.
Create --text-color-light for light text in Variables.css.
Delete !important because it is not doing anything in CollectionContentView.css

* Source/WebInspectorUI/UserInterface/Views/CollectionContentView.css:
(@media (prefers-color-scheme: dark) @media (prefers-contrast: more) .content-view.collection > .placeholder:not(.message-text-view)):
* Source/WebInspectorUI/UserInterface/Views/GraphicsOverviewContentView.css:
(.content-view.graphics-overview):
(@media (prefers-color-scheme: dark) @media (prefers-contrast: more) .content-view.graphics-overview > section > .header):
(@media (prefers-color-scheme: dark) .content-view.graphics-overview): Deleted.
* Source/WebInspectorUI/UserInterface/Views/Variables.css:
(:root):

--- a/Source/WebInspectorUI/UserInterface/Views/CollectionContentView.css
+++ b/Source/WebInspectorUI/UserInterface/Views/CollectionContentView.css
@@ -1,5 +1,6 @@
 /*
  * Copyright (C) 2016 Devin Rousso <webkit@devinrousso.com>. All rights reserved.
+ * Copyright (C) 2024 Frances Cornwall <frances_c@cox.net>.
  *
  * Redistribution and use in source and binary forms, with or without
  * modification, are permitted provided that the following conditions
@@ -26,7 +27,7 @@
 .content-view.collection {
     display: flex;
     flex-wrap: wrap;
-    overflow-y: auto !important;
+    overflow-y: auto;
 }
 
 .content-view.collection > .content-view {
@@ -46,4 +47,12 @@
     text-align: center;
     font-size: 13px;
     color: var(--text-color-gray-medium);
+}
+
+@media (prefers-color-scheme: dark) {
+    @media (prefers-contrast: more) {
+        .content-view.collection > .placeholder:not(.message-text-view) {
+            color: var(--text-color-light);
+        }
+    }
 }
