--- a/Source/WebInspectorUI/UserInterface/Views/GraphicsOverviewContentView.css
+++ b/Source/WebInspectorUI/UserInterface/Views/GraphicsOverviewContentView.css
@@ -1,5 +1,6 @@
 /*
  * Copyright (C) 2020 Apple Inc. All rights reserved.
+ * Copyright (C) 2024 Frances Cornwall <frances_c@cox.net>.
  *
  * Redistribution and use in source and binary forms, with or without
  * modification, are permitted provided that the following conditions
@@ -27,7 +28,6 @@
     background-color: var(--background-color-content);
     overflow-y: auto;
     padding-bottom: var(--navigation-bar-height);
-    background-color: hsl(0, 0%, 90%);
 }
 
 .content-view.graphics-overview > section {
@@ -72,8 +72,10 @@
 }
 
 @media (prefers-color-scheme: dark) {
-    .content-view.graphics-overview {
-        background-color: hsl(0, 0%, 14%);
+    @media (prefers-contrast: more) {
+        .content-view.graphics-overview > section > .header {
+            border-bottom: 1px solid hsl(0, 0%, 80%);
+            border-top: 1px solid hsl(0, 0%, 80%);
+        }
     }
 }
-
